src/test/deca/syntax/valid/semi.deca
//Test valide: Instruction valide
//Resultat : 0 Erreur

{
;
}
