src/test/deca/syntax/invalid/print_declaration.deca
//Test invalide: Affichage d'une declaration

//Resultat: Erreur
{
    println(int a = 0;);
}